# 2023-cpl-coding-0

./: .gitignore  CMakeLists.txt  README.md  hello.c
0-intro/: hello.c
1-types-io/: CMakeLists.txt  admin-scanf.c  admin.c  circle.c  mol.c  sphere.c  test.c
10-double-pointers/: CMakeLists.txt  README.md  decl.c  double-pointers.c  echo  echo.c  game-of-life-pointer.c  scores.c  selection-sort-strings.c
11-function-pointers/: CMakeLists.txt  atexit.c  bsearch-gnuc  bsearch-gnuc.c  bsearch.c  buffer-overflow  buffer-overflow.c  decl.c  integrate  integrate.c  signal.c  sort  sort.c
12-struct/: CMakeLists.txt  README.md  musician.c  padding.c  sds.c
13-linked-list/: README.md  josephus  josephus.c
2-if-for-array/: CMakeLists.txt  README.md  leap-else-if.c  leap-elseif.c  leap-if-else.c  leap-logical-expression.c  leap.c  min-array-input.c  min-array.c  min-of-three.c  min-of-two.c
3-for-a-while/: CMakeLists.txt  README.md  binary-search.c  digits-do-while.c  digits-while.c  palindrome.c  primes.c  selection-sort  selection-sort.c  stars.c
4-loops/: game-of-life-chatgpt.c  merge.c
5-function/: CMakeLists.txt  binary-search.c  game-of-life-transformed.c  leap.c  merge.c  palindrome.c  primes.c  selection-sort  selection-sort.c  stars.c
6-recursion/: CMakeLists.txt  bsearch-iter.c  bsearch-re.c  fib-array.c  fib-iter.c  fib-re.c  gcd-iter.c  gcd-re.c  main-re.c  merge.c  mergesort.c  min-re.c  min.c  sum-re.c
7-data-types/: CMakeLists.txt  README.md  char.c  compare.c  explict-conversion.c  float-limits.c  implicit-conversion.c  int-limits  int-limits.c  (+4 more)
(+84 files in other folders)
